--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link href='https://fonts.googleapis.com/css?family=Arimo:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
   </head>
   <body>
     <div class="banner">
