added generic css for calendar entries

--- a/html/index.html
+++ b/html/index.html
@@ -105,21 +105,28 @@
             <div class="cal-dotw-column"></div>
             <div class="cal-dotw-column friday-column"></div>
 
-            <div class="lecture-entry">
+            <div class="lecture-entry monday am-630">
               <div class="lecture-entry-header semibold">9 - 11AM</div>
-              <div class="lecture-entry-body">Math 113 Lec 006 <br> 420 Cory Hall</div>
+              <div class="lecture-entry-body block-4">Math 113 Lec 006 <br> 420 Cory Hall</div>
               <div class="lecture-entry-footer"></div>
             </div>
 
-            <div class="lecture-entry2">
-              <div class="lecture-entry-header semibold">10 - 2PM</div>
-              <div class="lecture-entry-body2">Math 113 Lec 006 <br> 420 Cory Hall</div>
+            <div class="lecture-entry thursday am-11">
+              <div class="lecture-entry-header semibold">9 - 11AM</div>
+              <div class="lecture-entry-body block-2">Math 113 Lec 006 <br> 420 Cory Hall</div>
               <div class="lecture-entry-footer"></div>
             </div>
 
-            <div class="other-entry">
-              <div class="other-entry-body"><span class="semibold">11 - 1PM</span> <br>Math 113 Lec 006 <br> 420 Cory Hall</div>
+            <div class="waitlisted-entry lecture-entry wednesday am-11">
+              <div class="lecture-entry-header semibold">9 - 11AM</div>
+              <div class="lecture-entry-body block-3">Math 113 Lec 006 <br> 420 Cory Hall</div>
+              <div class="lecture-entry-footer"></div>
             </div>
+
+            <div class="other-entry monday am-830">
+              <div class="other-entry-body block-4"><span class="semibold">11 - 1PM</span> <br>Math 113 Lec 006 <br> 420 Cory Hall</div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -151,7 +158,7 @@
           </div>
 
           <div class="sc-clear-row">
-            <p class="sc-clear">You can add these classes or clear your cart.</p><button class="sc-clear-button">Clear Cart</button>
+            <p class="sc-clear">You can add these classes <br>or clear your cart.<button class="sc-clear-button">Clear Cart</button>
           </div>
         </div>
         <!-- Add class panel -->
