The first hookup

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
     </div>
     <div class="main-container">
       <div>
-        <a class="my-academics-link" href="https://calcentral.berkeley.edu/academics">< Return to My Academics</a>
+        <a class="my-academics-link" href="https://calcentral.berkeley.edu/academics">Return to My Academics</a>
       </div>
 
       <div>
