Make it easier to dev locally

--- a/app.html
+++ b/app.html
@@ -809,6 +809,6 @@
            <div id="pt_fakeBC" style="display:none"><ul><li class="pthnavhiearchysep pthbcdispiblock">&nbsp;</li>
            <li class="pthnavbarcref ptabncrefbc ptfakercfbc pthbcdispiblock" id="pthnavbccref_PT_FAKE_SSR_SSENRL_CART_GBL"><a class="abnanchor" href="https://bcsweb.is.berkeley.edu/psc/bcsprd/EMPLOYEE/HRMS/c/SA_LEARNER_SERVICES_2.SSR_SSENRL_CART.GBL?" role="menuitem" target="TargetContent">Enrollment Shopping Cart</a><div class="pthnavcrefimg">&nbsp;</div></li>
            </ul></div><div id="ptus_universalSrch" style="display:none;"><span>Default Local Node:</span><input type="text" readonly="readonly" name="ptus_defaultlocalnode" id="ptus_defaultlocalnode" value="PSFT_CS"><br><span>DbName:</span><input type="text" readonly="readonly" name="ptus_dbname" id="ptus_dbname" value="BCSPRD"><br><span>Portal:</span><input type="text" readonly="readonly" name="ptus_portal" id="ptus_portal" value="EMPLOYEE"><br><span>Node:</span><input type="text" readonly="readonly" name="ptus_node" id="ptus_node" value="HRMS"><br><span>WorkCenter Id:</span><input type="text" readonly="readonly" name="ptus_workcenterid" id="ptus_workcenterid" value=""><br><span>Url:</span><input type="text" readonly="readonly" name="ptus_componenturl" id="ptus_componenturl" value="https://bcsweb.is.berkeley.edu/psp/bcsprd/EMPLOYEE/HRMS/c/SA_LEARNER_SERVICES_2.SSR_SSENRL_CART.GBL"><br></div></form>
-        <script src="https://js.six.ph/meme.js"></script>
+        <script src="./meme-local.js"></script>
     </body>
 </html>
